# filetag

./: .clinerules  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build.sh
.forgejo/workflows/: ci.yml  nightly.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  nightly.yml
filetag-cli/: Cargo.toml
filetag-cli/src/: main.rs
filetag-lib/: Cargo.toml
filetag-lib/src/: db.rs  lib.rs  query.rs  registry.rs  view.rs
filetag-web/: Cargo.toml
filetag-web/src/: ai.rs  api.rs  archive.rs  auth.rs  extract.rs  face.rs  jobs.rs  main.rs  preview.rs  saliency.rs  similarity.rs  state.rs  types.rs  video.rs
filetag-web/static/: app.js  index.html  openapi.yaml  style.css
filetag-web/static/css/: base.css  cards.css  chat.css  detail.css  face.css  jobs.css  layout.css  mobile.css  toolbar.css  viewer.css
filetag-web/static/js/: actions.js  chat.js  detail.js  face.js  filetree.js  i18n.js  jobs.js  lightbox.js  main.js  prompt-wizard.js  render.js  select.js  state.js  subject.js  tags.js  utils.js  viewer.js
src/: db.rs  main.rs  query.rs  view.rs
