[workspace]
resolver = "2"
members = ["filetag-lib", "filetag-cli", "filetag-web"]

[workspace.package]
version = "0.13.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/b4ry0n/filetag"

[workspace.dependencies]
anyhow = "1.0"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
