[package]
name = "filetag-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web interface for filetag"

[dependencies]
filetag-lib = { path = "../filetag-lib" }
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.7"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["fs"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust = { version = "0.6", default-features = false }
unrar = { version = "0.5", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff", "gif", "bmp", "ico"] }

[features]
rar = ["dep:unrar"]
