[package]
name = "filetag-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web interface for filetag"

[dependencies]
filetag-lib = { path = "../filetag-lib" }
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["fs", "set-header", "limit"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
sevenz-rust = { version = "0.6", default-features = false }
unrar = { version = "0.5", optional = true }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
base64 = "0.22"
rand = { version = "0.9", features = ["std"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff", "gif", "bmp", "ico"] }
walkdir.workspace = true
dirs = "6"
tract-onnx = "0.21"

[features]
rar = ["dep:unrar"]
