[package]
name = "filetag-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web interface for filetag"

[dependencies]
filetag-lib = { path = "../filetag-lib" }
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["fs", "set-header", "limit"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
sevenz-rust = { version = "0.6", default-features = false }
unrar = { version = "0.5", optional = true }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
base64 = "0.22"
rand.workspace = true
sha2 = "0.11.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff", "gif", "bmp", "ico"] }
webp = "0.3.1"
walkdir.workspace = true
dirs = "6"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
which = "8.0.2"
hex = "0.4"

[features]
rar = ["dep:unrar"]
# Build with `--features openvino` on systems where Intel OpenVINO is installed.
# Set ORT_DYLIB_PATH to the libonnxruntime.so that comes with the OpenVINO toolkit
# (e.g. the one bundled with the onnxruntime-openvino Python package).
# When active, load-dynamic takes precedence over download-binaries: the prebuilt
# binary is not used, and ORT is loaded at runtime from ORT_DYLIB_PATH instead.
openvino = ["ort/load-dynamic", "ort/openvino"]
